<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeaconApk</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_device">DeviceActivity</string>
    <string name="title_activity_list_devices">ListDevicesActivity</string>
    <string name="title_activity_monitor_device">MonitorDeviceActivity</string>
    <string name="button_register">Register</string>
    <string name="editText_username">Username</string>
    <string name="editText_password">Password</string>
    <string name="editText_firstName">First Name</string>
    <string name="editText_lastName">Last name</string>
    <string name="title_activity_test_vezbanje">TestVezbanjeActivity</string>
    <string name="title_activity_spaces">SpacesActivity</string>
    <string name="title_activity_network_devices">NetworkDevicesActivity</string>
    <string name="title_activity_space_devices">SpaceDevicesActivity</string>
    <string name="title_activity_monitoring">MonitoringActivity</string>
    <string name="title_activity_test">Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test1">Test1Activity</string>

</resources>
